--- a/server/src/routes/chocolate/faq.html
+++ b/server/src/routes/chocolate/faq.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title></title>
+	<title>Studio Chocolate Hybrid Gifting Frequently Asked Questions</title>
 	<link rel="stylesheet" href="css/chocolate.css">
 	<link rel="icon" type="image/webp" href="images/choclogo.webp"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<img src="images/choclogo.webp" class="logo">
+<img src="images/choclogo.webp" class="logo" alt="Studio Chocolate Logo">
 <ol style="max-width: 600px">
 	<li class="quest">
 		Why is the shipping free? Is there something different about these chocolates?
@@ -39,8 +39,8 @@
 	</li>
 	<ol start="1" type="a">
 		<li>
-			Hybrid Gifts can be shipped as soon as you, the gift-giver, go to <a href="http://hybridgifting.com"
-			                                                                     target="_blank">http://hybridgifting.com</a>
+			Hybrid Gifts can be shipped as soon as you, the gift-giver, go to
+			<a href="http://hybridgifting.com" target="_blank">http://hybridgifting.com</a>
 			and make the digital part of the gift.
 			<br>
 			This is to help prevent disappointment and frustration from you and your gift-receiver. If something
@@ -101,7 +101,7 @@
 			<a href="http://hybridgifting.com" target="_blank">hybridgifting.com</a>, please contact
 			<a href="mailto:support@hybridgifting.com" target="_blank">support@hybridgifting.com</a>. We will get back
 			to you as soon as we can, but please allow at least 48 hours for a reply. (Studio Chocolate is much more
-			rapid in their turnaround times!)<u></u><u></u></span>
+			rapid in their turnaround times!)
 		</li>
 	</ol>
 </ol>
