Update to https

--- a/server/src/routes/chocolate/faq.html
+++ b/server/src/routes/chocolate/faq.html
@@ -21,25 +21,11 @@
 		</ol>
 	</li>
 	<li class="quest">
-		My browser warns me that the <a href="http://hybridgifting.com" target="_blank">hybridgifting.com</a>
-		site is not secure. Is this a scam?
-		<ol start="1" type="a">
-			<li>
-				Secure websites primarily protect personal and financial data, like your name, address, and credit card
-				number. The only information that goes through <a href="http://hybridgifting.com" target="_blank">hybridgifting.com</a>
-				is the digital content you upload and your order number. Even these are very securely stored on the
-				University of Nottingham servers. We can provide you with details, if you like, via the contact email
-				below. Rest assured that nothing else goes through this website, and it never interacts with the Studio
-				Chocolate website.
-			</li>
-		</ol>
-	</li>
-	<li class="quest">
 		Why can&rsquo;t my Hybrid Gift be shipped immediately? I need it to arrive right away!
 		<ol start="1" type="a">
 			<li>
 				Hybrid Gifts can be shipped as soon as you, the gift-giver, go to
-				<a href="http://hybridgifting.com" target="_blank">http://hybridgifting.com</a>
+				<a href="https://hybridgifting.com" target="_blank">https://hybridgifting.com</a>
 				and make the digital part of the gift.
 				<br>
 				This is to help prevent disappointment and frustration from you and your gift-receiver. If something
@@ -80,10 +66,10 @@
 		</ol>
 	</li>
 	<li class="quest">
-		Who is behind <a href="http://hybridgifting.com" target="_blank">hybridgifting.com</a>?
+		Who is behind <a href="https://hybridgifting.com" target="_blank">hybridgifting.com</a>?
 		<ol start="1" type="a">
 			<li>
-				<a href="http://hybridgifting.com" target="_blank">hybridgifting.com</a> is a website owned and run by
+				<a href="https://hybridgifting.com" target="_blank">hybridgifting.com</a> is a website owned and run by
 				members of the Mixed Reality Lab, a technology research lab at the University of Nottingham. Hybrid
 				Gifting
 				is a research project funded by UKRI/EPSRC. You can find out about it and UKRI/EPSRC at the University&rsquo;s
@@ -99,7 +85,7 @@
 				details.
 				<br>
 				This is why we have a completely separate website for making digital gifts. The University and <a
-					href="http://hybridgifting.com" target="_blank">hybridgifting.com</a> have no way of interacting
+					href="https://hybridgifting.com" target="_blank">hybridgifting.com</a> have no way of interacting
 				with Studio Chocolate&rsquo;s website or any of the information they store to bring you your delicious
 				chocolates!
 			</li>
@@ -123,7 +109,7 @@
 				they
 				need to
 				contact us, they will. If you have a question or problem directly related to the Hybrid Gift Maker at
-				<a href="http://hybridgifting.com" target="_blank">hybridgifting.com</a>, please contact
+				<a href="https://hybridgifting.com" target="_blank">hybridgifting.com</a>, please contact
 				<a href="mailto:support@hybridgifting.com" target="_blank">support@hybridgifting.com</a>. We will get
 				back
 				to you as soon as we can, but please allow at least 48 hours for a reply. (Studio Chocolate is much more
