--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,7 @@
 
 	%sapper.base%
 
-	<link rel="manifest" href="manifest.json">
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/svg" href="cardographer.svg">
 	%sapper.scripts%
 	%sapper.styles%
 	%sapper.head%
