--- a/static/miro/index.html
+++ b/static/miro/index.html
@@ -16,6 +16,14 @@
 							console.log(objects)
 						},
 					},
+					bottomBar: {
+						title: 'Export to Cardographer',
+						svgIcon: icon,
+						onClick: async () => {
+							const objects = await miro.board.widgets.get()
+							console.log(objects)
+						},
+					},
 				},
 			})
 		})
