--- a/static/miro/index.html
+++ b/static/miro/index.html
@@ -13,7 +13,7 @@
 						title: 'Cardographer Upload',
 						svgIcon: icon,
 						onClick: async () => {
-							miro.board.ui.openLeftSidebar('./sidebar.html')
+							miro.board.ui.openLeftSidebar('sidebar.html')
 						},
 					},
 				},
