--- a/static/miro/sidebar.html
+++ b/static/miro/sidebar.html
@@ -20,6 +20,7 @@
             padding: 8px;
             margin: 8px;
             font-weight: bold;
+	        opacity: 0;
         }
 
         .imageItem {
@@ -54,9 +55,8 @@
 	const warning = document.getElementById('warning')
 
 	async function getWidget() {
-		const untitled = await miro.board.widgets
-			.get()
-			.filter((widget) => widget.type === "IMAGE" && widget.url === '' && widget.title === '')
+		const widgets = await miro.board.widgets.get()
+		const untitled = widgets.filter((widget) => widget.type === "IMAGE" && widget.url === '' && widget.title === '')
 
 		if (untitled.length > 0) {
 			warning.innerText = untitled.length + " images need titles before uploading"
