--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--suppress HtmlRequiredTitleElement -->
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	%svelte.head%
+	%sveltekit.head%
 	<link rel="icon" type="image/svg" href="/cardographer.svg">
 </head>
 <body>
-<div id="svelte">%svelte.body%</div>
+<div id="svelte">%sveltekit.body%</div>
 </body>
 </html>
